--- a/video_stranica.html
+++ b/video_stranica.html
@@ -21,8 +21,7 @@ body {
 
 
 <body>
-	<p><video width=800 height=auto controls>
-<source src="C:\Users\admin\Desktop\AndelaJuricevGrgic_projektnizadatak3\reklama_Nescafe.mp4" type="video/mp4"/></video></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/US-57qa_-qY?si=4RrpO_Yy1jQTL_HU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	    <div class="button-container">
         <button type="button"><a href=file:///C:/Users/admin/Desktop/AndelaJuricevGrgic_projektnizadatak3/Andela_Juricev_Grgic.html> Početna </button> 
         <button type="button"><a href=file:///C:/Users/admin/Desktop/AndelaJuricevGrgic_projektnizadatak3/O_meni_stranica.html> O meni </button> <button type="button"><a href=file:///C:/Users/admin/Desktop/AndelaJuricevGrgic_projektnizadatak3/vjezbe_stranica.html> Vježbe </button></div>
